tests/type/no_colon.rev
var a bool = true // error: missing ':' to declare type